# value-proposition-design

./: .gitignore  CONTRIBUTING.md  IDENTITY.md  JTBD_Prompt_Optimized_V2.md  README.md  SECURITY.md  SKILL.md  USER.md  pyproject.toml
.openclaw/: workspace-state.json
memory/: 2026-04-16-session-setup.md  2026-04-16-skill-assessment.md  2026-04-20-jtbd-prompt-review.md  2026-04-20-request-timed-out-before-a-res.md  jtbd_knowledge_base.md  when_coffee_kale_compete.txt
references/: knowledge-base.md
value-proposition-design-skill/: SKILL.md
value-proposition-design-skill/vpd/: canvas_analyzer.py  config.yaml  experiment_designer.py  interview_generator.py  priority_calculator.py  survey_designer.py
value-proposition-design-skill/vpd/tests/: test_all.py
vpd/: __init__.py  canvas_analyzer.py  experiment_designer.py  interview_generator.py  priority_calculator.py  sample_calculator.py  strategy_scorer.py  survey_designer.py  utils.py
vpd/tests/: test_all.py
web-persona-skill-code/: README.md
